# cft_test

./: .env  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  README.md  prestart.sh  pyproject.toml  test-start.sh
app/migration/: env.py
app/migration/versions/: 42c951ddd6fe_new.py  4a57891017aa_first.py  4e8c6772a36c_upgrade_user_model.py  64bfb0d77540_upgrade_salary.py  8cbabec0a86c_initial_migration.py  a476e52146cf_second.py  bbc88f98a22f_upgrade_user_and_salary_model.py  c1f73f5f076c_upgrade_salary_model.py
app/scripts/: test.sh  test_env_vars.sh
app/src/: backend_pre_start.py  initial_data.py  main.py
app/src/api/: deps.py
app/src/api/api_v1/: api.py
app/src/api/api_v1/endpoints/: login.py  salaryinfo.py  users.py
app/src/core/: config.py  security.py
app/src/crud/: __init__.py  base.py  crud_salary.py  crud_user.py
app/src/db/: base.py  init_db.py
app/src/models/: __init__.py  salary.py  user.py
app/src/schemas/: __init__.py  salary.py  user.py
app/src/tests/: conftest.py
app/src/tests/api/api_v1/: test_login.py  test_salaryinfo.py  test_users.py
app/src/tests/crud/: test_user.py
app/src/tests/utils/: salary.py  user.py  utils.py
