[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Daniil Mikhailov <stryktyradm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.11.1"
anyio = "3.7.0"
cffi = "1.15.1"
click = "8.1.3"
cryptography = "41.0.1"
dnspython = "2.3.0"
ecdsa = "0.18.0"
email-validator = "2.0.0.post2"
exceptiongroup = "1.1.1"
fastapi = "0.96.0"
greenlet = "2.0.2"
h11 = "0.14.0"
idna = "3.4"
mako = "1.2.4"
markupsafe = "2.1.3"
passlib = "1.7.4"
psycopg2-binary = "2.9.6"
pyasn1 = "0.5.0"
pycparser = "2.21"
pydantic = "1.10.8"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.15"
starlette = "0.27.0"
typing-extensions = "4.6.3"
uvicorn = "0.22.0"
tenacity = "^8.2.2"
pytest = "^7.3.1"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
